# azer_cpp

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.cache/clangd/index/: application.cpp.E961A0D06EEAE2E1.idx  application.h.6D252CC4B5F8A6DC.idx  base.h.C38B6414C6E1CE43.idx  glfw3.h.3A49EE8351303787.idx  main.cpp.D1DBFE47BB631745.idx  render_context.cpp.5F56F569A9C6C34F.idx  render_context.h.AE32EE23E5BA3E73.idx  renderer.cpp.6C11F4A6EA2682DD.idx  renderer.h.21FB48184A21C954.idx  vulkan_render_context.cpp.3C81F3AD2F7C23A9.idx  vulkan_render_context.h.A16A5A72EBF68C54.idx
lib/vulkan_cpp_module/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  Project.slnx  VulkanCppModule.vcxproj  VulkanCppModule.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
lib/vulkan_cpp_module/VulkanCppModule.dir/Debug/: vulkan.cppm.ifc.d.json  vulkan.cppm.module.json
lib/vulkan_cpp_module/VulkanCppModule.dir/Debug/VulkanCppModule.tlog/: CL.command.1.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  Microsoft.Build.CPPTasks.CL.read.1.tlog  Microsoft.Build.CPPTasks.CL.write.1.tlog  VulkanCppModule.lastbuildstate
lib/vulkan_cpp_module/VulkanCppModule.dir/Debug/VulkanCppModule_MD.tlog/: CL.command.1.tlog  Microsoft.Build.CPPTasks.CL.read.1.tlog  Microsoft.Build.CPPTasks.CL.write.1.tlog
lib/vulkan_cpp_module/VulkanCppModule.dir/Debug/microsoft/STL/: std.ixx.module.json
src/: azpch.h  main.cpp
src/backends/platform/vulkan/: vulkan_render_context.cpp  vulkan_render_context.h
src/core/: application.cpp  application.h  base.h
src/renderer/: render_context.cpp  render_context.h  renderer.cpp  renderer.h
